--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,8 +15,8 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background-color: #ededed; /* Change background color to white */
+  color: black; 
   font-family: Arial, Helvetica, sans-serif;
 }
 
